--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "start": "next start",
     "lint": "next lint"
   },
-    "prisma": {
-      "seed": "ts-node prisma/seed.ts"
-    },
- 
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^4.11.0",
+    "axios": "^1.3.4",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
